---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2026-02-04
  Changes:
    - Hotfix to fix bungus/wungus path
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2026-02-03
  Changes:
    - Added Krastorio2/Krastorio2 Spaced Out support
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2026-01-29
  Changes:
    - Fixed locale for precise electronic science pack and electrochemical science pack (cubic recipe)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2026-01-28
  Changes:
    - Added graphics and locale for metal-and-stars quantum science pack intermediaries
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2026-01-21
  Changes:
    - Added pyalienlife and Voidcraft support
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2026-01-19
  Changes:
    - Replaced outer-rim-spacecraft-science-pack with a better image
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2026-01-16
  Changes:
    - Added Outer Rim (et al.) support
    - Added Cubium support
    - Fixed some missing technology graphics
    - Fixed some missing recipe/technology locales
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2026-01-14
  Changes:
    - Added Age of Production support
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2026-01-14
  Changes:
    - Updated space science graphics