@@ -1,6 +1,6 @@
-if mods["Krastorio2"] or mods["Krastorio2-spaced-out"] then
-    -- fighting Krastorio2 for modifications to the base sciences :|
-    require("lib.icon-manipulation").apply_icon({ "tool" })
+if mods["Krastorio2"] or mods["Krastorio2-spaced-out"] or mods["outer-rim"] then
+	-- fighting Krastorio2 et al. for modifications to the base sciences :|
+	require("lib.icon-manipulation").apply_icon({ "tool" })
 end
 
 require("lib.icon-manipulation").apply_icon({ "recipe", "technology" })
